--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -44,10 +44,10 @@ RUN git clone https://github.com/openfheorg/openfhe-python.git \
 # Install openfhe as a pip package
 WORKDIR /openfhe-python
 RUN python3 setup.py sdist bdist_wheel && pip install dist/openfhe-*.whl
-RUN pip install "fastapi[standard]" web3 tenacity pydantic_settings
+RUN pip install "fastapi[standard]" web3 tenacity pydantic_settings python-json-logger
 # Now install aca-py
 RUN adduser api
 WORKDIR /app
-COPY . /app 
+COPY bbyor /app 
 RUN chown -R api.api /app
 USER api
