--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     python3-venv \
     sudo \
+    npm \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PyBind11
@@ -45,6 +46,8 @@ RUN git clone https://github.com/openfheorg/openfhe-python.git \
 WORKDIR /openfhe-python
 RUN python3 setup.py sdist bdist_wheel && pip install dist/openfhe-*.whl
 RUN pip install "fastapi[standard]" web3 tenacity pydantic_settings python-json-logger
+# For tests
+RUN npm i -g snarkjs
 # useradd doesnt creates /home
 # 
 RUN adduser bbyor 
