--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,24 @@ ignition/deployments/chain-31337
 
 circomlib/
 circuits/circomlib
+# Ignore build artifacts
+*.r1cs
+*.wasm
+*.zkey
+*.wtns
+*.sym
+*.dat
+
+# Powers of Tau files
+*.ptau
+
+# Proofs and public signals
+proof.json
+public.json
+witness.json
+
+# Input files (optional: if you generate inputs dynamically)
+input.json
+
+# Solidity verifier (optional: if you generate it automatically)
+verifier.sol
