--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -158,7 +158,7 @@ services:
       - GENESIS_FHE=./contracts/genesis_openfhe.json
       - CONTRACT_ADDR=${CONTRACT_ADDR}
       - PRIVATE_KEY=0x7c852118294e51e653712a81e05800f419141751be58f605c371e15141b007a6
-      - HOST_BEHAVIOUR=1
+      - NODE_BEHAVIOUR=1
     networks:
       - bbyor
     ports:
@@ -181,7 +181,7 @@ services:
       - GENESIS_FHE=./contracts/genesis_openfhe.json
       - CONTRACT_ADDR=${CONTRACT_ADDR}
       - PRIVATE_KEY=0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30a34926a
-      - HOST_BEHAVIOUR=2
+      - NODE_BEHAVIOUR=2
     networks:
       - bbyor
     ports:
